ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wellinkare-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/service-upstream: "true"
  namespace: default
spec:
  rules:
    - host: dev.wellinkare.info
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: back-office-service-dev
                port:
                  number: 80
          - path: /oauth2-ms/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: oauth-ms-service-dev
                port:
                  number: 2000
          - path: /assessment-ms/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: assessment-ms-service-dev
                port:
                  number: 8094
          - path: /healthcare-facility-ms/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: healthcare-facility-service-dev
                port:
                  number: 8093
          - path: /healthcare-ms/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: healthcare-service-dev
                port:
                  number: 8092
          - path: /notification-ms/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: notification-service-dev
                port:
                  number: 8090
